unpackaged/main/default/objects/Project_Costs__c/Project_Costs__c.object-meta.xml
<CustomObject>
    <label>Project Costs</label>
    <nameField>
        <displayFormat>P-COST-{0000}</displayFormat>
        <label>Project Costs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>