unpackaged/main/default/objects/Project_Costs__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the product/service provided</description>
    <inlineHelpText>Description of the product/service provided</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>