unpackaged/main/default/objects/Project_Costs__c/fields/OneTimeCost__c.field-meta.xml
<CustomField>
    <fullName>OneTimeCost__c</fullName>
    <label>One-Time Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>