unpackaged/main/default/objects/Project_Costs__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <description>Product/Service purchased</description>
    <inlineHelpText>Product/Service purchased</inlineHelpText>
    <label>Product/Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>