unpackaged/main/default/objects/Project_Costs__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project the cost relates to</description>
    <inlineHelpText>Project the cost relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Costs</relationshipLabel>
    <relationshipName>Project_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>