unpackaged/main/default/objects/Project_Costs__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider of the product purchased</description>
    <inlineHelpText>Provider of the product purchased</inlineHelpText>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>