unpackaged/main/default/objects/Project_Costs__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <description>Data the product/service was purchased</description>
    <inlineHelpText>Data the product/service was purchased</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>