unpackaged/main/default/objects/Project_Costs__c/fields/RecurringCost__c.field-meta.xml
<CustomField>
    <fullName>RecurringCost__c</fullName>
    <label>Recurring Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>