unpackaged/main/default/objects/Project_Costs__c/fields/RecurringSchedule__c.field-meta.xml
<CustomField>
    <fullName>RecurringSchedule__c</fullName>
    <description>Schedule the recurring cost occurs</description>
    <inlineHelpText>Schedule the recurring cost occurs</inlineHelpText>
    <label>Recurring Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>