unpackaged/main/default/objects/Project_Costs__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <description>Specifications of the product/service purchased</description>
    <inlineHelpText>Specifications of the product/service purchased</inlineHelpText>
    <label>Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>