unpackaged/main/default/objects/Project_Costs__c/validationRules/P_COST_VR1_ScheduleMustBeProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>P_COST_VR1_ScheduleMustBeProvided</fullName>
    <active>true</active>
    <description>If the cost is recurring, the schedule must be provided.</description>
    <errorConditionFormula>AND(ISPICKVAL( RecurringSchedule__c,""),
				 RecurringCost__c &lt;&gt; 0)</errorConditionFormula>
    <errorDisplayField>RecurringSchedule__c</errorDisplayField>
    <errorMessage>You must provide the recurring schedule for a recurring cost</errorMessage>
</ValidationRule>